--- a/.github/actions/action-with-output/action.yml
+++ b/.github/actions/action-with-output/action.yml
@@ -10,4 +10,4 @@ outputs:
 runs:
   using: docker
   image: "docker://alpine:latest"
-  entrypoint: ["/bin/sh", "echo", "0"]
+  entrypoint: '["/bin/sh", "echo", "0"]'
