--- a/.github/workflows/trigger-daily.yml
+++ b/.github/workflows/trigger-daily.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v1.0.0
 
       - name: Create and push new tag
-        uses: |
+        run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
