Nothing to see here

--- a/.github/workflows/trigger-daily.yml
+++ b/.github/workflows/trigger-daily.yml
@@ -14,6 +14,9 @@ jobs:
 
       - name: Create and push new tag
         run: |
+          cd "${GITHUB_WORKSPACE}" || exit 1
+          git status
+          
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
