--- a/.github/actions/action-with-output/action.yml
+++ b/.github/actions/action-with-output/action.yml
@@ -7,6 +7,7 @@ outputs:
     description: This is the output being returned
     value: 42
 
+# The below doesn't matter at all
 runs:
   using: docker
   image: "docker://alpine:latest"
