--- a/.github/workflows/steps-populated.yml
+++ b/.github/workflows/steps-populated.yml
@@ -13,4 +13,6 @@ jobs:
           uses: ./.github/actions/action-with-output
 
         - name: Inspect the contents of `steps`
-          run: echo ${{ toJson(steps) }} | jq
+          run: test $(echo "${{ toJson(steps) }}" | jq '. | length') -gt 0
+
+
