--- a/.github/workflows/trigger-on-tags.yml
+++ b/.github/workflows/trigger-on-tags.yml
@@ -16,5 +16,5 @@ jobs:
         run: echo ${{ GITHUB_REF }}
 
       - name: Check if it's an actual tag
-        if: !startsWith(github.ref, 'refs/tags/')
+        if: {{ !startsWith(github.ref, 'refs/tags/') }}
         run: exit 1
