Nothing to see here

--- a/.github/workflows/trigger-daily.yml
+++ b/.github/workflows/trigger-daily.yml
@@ -16,18 +16,15 @@ jobs:
         run: |
           cd "${GITHUB_WORKSPACE}" || exit 1
 
-          git checkout -b tags-test
+          git checkout -b master
 
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
           git commit --allow-empty -m 'Nothing to see here.  Commited by trigger-daily.yml'
 
-          git config -l
-          git remote -v
-
           REMOTE="https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
-          git push "${REMOTE}" tags-test
+          git push "${REMOTE}" master
 
           TAG="v0.0.1-$(date +%F)+$(echo ${GITHUB_SHA} | cut -c1-7)"
           git tag -a "${TAG}" -m "${TAG}"
