--- a/.github/workflows/trigger-on-tags.yml
+++ b/.github/workflows/trigger-on-tags.yml
@@ -1,5 +1,14 @@
 name: Should trigger on git tag push
 
+# See: https://github.community/t5/GitHub-API-Development-and/How-to-restrict-execution-of-GitHub-Actions-workflow-on-tags/m-p/29567
+# Workaround:
+#
+#  on:
+#    push:
+#      branches:
+#        - refs/tags/*
+#
+
 on:
   push:
     tags:
