--- a/.github/workflows/steps-populated.yml
+++ b/.github/workflows/steps-populated.yml
@@ -1,5 +1,9 @@
 name: Check if steps is properly populated
 
+# src: https://help.github.com/en/articles/contexts-and-expression-syntax-for-github-actions#steps-context
+#
+#   `steps` should contain info about steps, including `output`s of previous steps, currently it doesn't
+#
 on:
   push:
     branches:
@@ -15,6 +19,6 @@ jobs:
         - name: Run action that outputs output
           uses: ./.github/actions/action-with-output
 
-        - name: Inspect the contents of `steps`
+        - name: Check if `steps` is empty
 #          run: test $(echo "${{ toJson(steps) }}" | jq '. | length') -gt 0
           run: echo "0"
