--- a/.github/workflows/steps-populated.yml
+++ b/.github/workflows/steps-populated.yml
@@ -20,5 +20,4 @@ jobs:
           uses: ./.github/actions/action-with-output
 
         - name: Check if `steps` is empty
-#          run: test $(echo "${{ toJson(steps) }}" | jq '. | length') -gt 0
-          run: echo "0"
+          run: test $(echo "${{ toJson(steps) }}" | jq '. | length') -gt 0
