--- a/.github/workflows/trigger-daily.yml
+++ b/.github/workflows/trigger-daily.yml
@@ -2,8 +2,7 @@ name: Trigger daily, and perform some tasks
 
 on:
   schedule:
-    - cron:  '*/5 * * * *'
-#    - cron:  '0 8 * * *'
+    - cron:  '0 8 * * *'
 
 jobs:
   scheduled-run:
