--- a/.github/workflows/steps-populated.yml
+++ b/.github/workflows/steps-populated.yml
@@ -17,6 +17,7 @@ jobs:
         - uses: actions/checkout@v1.0.0
 
         - name: Run action that outputs output
+          id: outputter
           uses: ./.github/actions/action-with-output
 
         - name: Check if `steps` is empty
