execute steps check in cron

--- a/.github/workflows/steps-populated.yml
+++ b/.github/workflows/steps-populated.yml
@@ -4,10 +4,10 @@ name: Check if steps is properly populated
 #
 #   `steps` should contain info about steps, including `output`s of previous steps, currently it doesn't
 #
+
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron:  '0 1 * * *'
 
 jobs:
   check-steps:
