--- a/.github/actions/action-with-output/action.yml
+++ b/.github/actions/action-with-output/action.yml
@@ -5,10 +5,8 @@ author: 'Damian Mee <spam@meedamian.com>'
 outputs:
   some-value:
     description: This is the output being returned
-    value: 42
 
-# The below doesn't matter at all
 runs:
   using: docker
   image: "docker://alpine:latest"
-  entrypoint: '["/bin/sh", "echo", "0"]'
+  entrypoint: '["/bin/sh", "echo", "::set-output", "name=some-value::42"]'
